--- a/en/index.html
+++ b/en/index.html
@@ -18,5 +18,10 @@
   </ul>
   <p><a href="https://html5book.ru/html-table/#grouping" title="html5book.ru">Группировка разделов таблицы(Продолжение)</a></p>
   <p><a href="https://html5book.ru/css3-tables/" title="html5book.ru">css-таблицы(учебник)</a></p>
+  <p><a href="https://html5book.ru/css-border/" title="html5book.ru">border, border-style, border-color . . .</a></p>
+  <h2>Макеты таблиц</h2>
+  <ol>
+    <li><a href="tables/horizontal-minimalism.html">Горизонтальный минимализм</a></li>
+  </ol>
 </body>
 </html>
