--- a/en/tables/tables.html
+++ b/en/tables/tables.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="css/tables.css">
+  <link rel="stylesheet" href="../css/tables.css">
   <title>Tables (EN)</title>
 </head>
 <body>
@@ -35,6 +35,35 @@
     <tr><td>1</td><td>Томаты</td><td>кг</td><td>15,20</td><td>69,00</td><td>1048,80</td></tr>
     <tr><td>2</td><td>Огурцы</td><td>кг</td><td>2,50</td><td>48,00</td><td>120,00</td></tr>
     <tr><td colspan="5" style="text-align: right;">ИТОГО:</td><td>1168,80</td></tr>
+  </table>
+
+  <h2>Группировка разделов таблицы</h2>
+  <table>
+    <caption>Группировка разделов таблицы</caption>
+    <thead>
+      <tr>
+        <th>№ п/п</th>
+        <th>Наименование товара</th>
+        <th>Ед. изм.</th>
+        <th>Количество</th>
+        <th>Цена за ед. изм., руб.</th>
+        <th>Стоимость, руб.</th>
+      </tr>
+    </thead>
+    <tfoot>
+      <tr>
+        <td colspan="5" style="text-align: right;">ИТОГО:</td>
+        <td>1168,80</td>
+      </tr>
+    </tfoot>
+    <tbody>
+      <tr>
+        <td>1</td><td>Томаты</td><td>кг</td><td>15,20</td><td>69,00</td><td>1048,80</td>
+      </tr>
+      <tr>
+        <td>2</td><td>Огурцы</td><td>кг</td><td>2,50</td><td>48,00</td><td>120,00</td>
+      </tr>
+    </tbody>
   </table>
   
 </body>
