--- a/ib/labs/courses/js.html
+++ b/ib/labs/courses/js.html
@@ -2,14 +2,23 @@
 <html>
 <head>
   <title>Курсы JavaScript</title>
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-Курсы JavaScript
-Название Ак.часов
-JavaScript. Уровень 1. Основы веб-программирования 24
-JavaScript. Уровень 2. Расширенные возможности 16
-Использование jQuery 16
-JavaScript. Уровень 3-б. AJAX. Разработка веб-приложений для Web 2.0 24
-Всего Ак. часов 80
+  <table>
+    <caption>Курсы JavaScript</caption>
+    <thead>
+      <tr><th>Название</th><th>Ак.часов</th></tr>
+    </thead>
+    <tfoot>
+      <tr><td>Всего Ак. часов</td><td>80</td></tr>
+    </tfoot>
+    <tbody>
+      <tr><td>JavaScript. Уровень 1. Основы веб-программирования</td><td>24</td></tr>
+      <tr><td>JavaScript. Уровень 2. Расширенные возможности</td><td>16</td></tr>
+      <tr><td>Использование jQuery</td><td>16</td></tr>
+      <tr><td>JavaScript. Уровень 3-б. AJAX. Разработка веб-приложений для Web 2.0</td><td>24</td></tr>
+    </tbody>
+  </table>
 </body>
 </html>	
