--- a/ib/labs/courses/php.html
+++ b/ib/labs/courses/php.html
@@ -14,10 +14,10 @@
       <tr><td>Всего Ак. часов</td><td>24</td></tr>
     </tfoot>
     <tbody>
-      <tr><td>PHP. Уровень 1. Основы создания сайтов</td><td class="time">24</td></tr>
-      <tr><td>PHP. Уровень 2. Разработка web-сайтов и взаимодействие с MySQL</td><td class="time">24</td></tr>
-      <tr><td>PHP. Уровень 3. Профессиональная разработка на PHP5</td><td class="time">24</td></tr>
-      <tr><td>PHP. Уровень 5. Проектирование и разработка сложных веб-проектов на PHP5</td><td class="time">24</td></tr>
+      <tr><td>PHP. Уровень 1. Основы создания сайтов</td><td>24</td></tr>
+      <tr><td>PHP. Уровень 2. Разработка web-сайтов и взаимодействие с MySQL</td><td>24</td></tr>
+      <tr><td>PHP. Уровень 3. Профессиональная разработка на PHP5</td><td>24</td></tr>
+      <tr><td>PHP. Уровень 5. Проектирование и разработка сложных веб-проектов на PHP5</td><td>24</td></tr>
     </tbody>
   </table>
 
