--- a/ib/labs/courses/web.html
+++ b/ib/labs/courses/web.html
@@ -1,15 +1,26 @@
 ﻿<!doctype html>
 <html>
 <head>
-	<title>Курсы по веб-технологиям</title>
+  <title>Курсы по веб-технологиям</title>
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-Курсы по веб-технологиям
-Название Ак.часов
-Web-мастеринг. Серверное web-программирование 24
-XML И XSLT. Современные технологии обработки данных для ВЕБ 32
-MySQL 5. Проектирование и создание баз данных для web 32
-Веб-дизайн. Разработка и оформление сайтов 32
-Всего Ак. часов 120
+  <table>
+    <caption>
+      Курсы по веб-технологиям
+    </caption>
+    <thead>
+      <tr><th>Название</th><th>Ак.часов</th></tr>
+    </thead>
+    <tfoot>
+      <tr><td>Всего Ак. часов</td><td>120</td></tr>
+    </tfoot>
+    <tbody>
+      <tr><td>Web-мастеринг. Серверное web-программирование</td><td>24</td></tr>
+      <tr><td>XML И XSLT. Современные технологии обработки данных для ВЕБ</td><td>32</td></tr>
+      <tr><td>MySQL 5. Проектирование и создание баз данных для web</td><td>32</td></tr>
+      <tr><td>Веб-дизайн. Разработка и оформление сайтов</td><td>32</td></tr>
+    </tbody>
+  </table>
 </body>
 </html>	
