--- a/en/tables/horizontal-minimalism.html
+++ b/en/tables/horizontal-minimalism.html
@@ -11,7 +11,7 @@
 
 </head>
 <body>
-  <h1>Горизонтальный минимализм</h1>
+  <h1>1. Горизонтальный минимализм</h1>
   <p>
     Горизонтальные таблицы — это таблицы, текст в которых читается по горизонтали. Каждая сущность представляет собой отдельную строку. Вы можете оформить подобные таблицы в минималистском стиле, поместив двухпиксельную границу под заголовком th.
   </p>
