--- a/en/index.html
+++ b/en/index.html
@@ -22,6 +22,8 @@
   <h2>Макеты таблиц</h2>
   <ol>
     <li><a href="tables/horizontal-minimalism.html">Горизонтальный минимализм</a></li>
+    <li><a href="tables/vertical-minimalism.html">Вертикальный минимализм</a></li>
+    <li><a href="tables/box-style.html">Коробочный стиль</a></li>
   </ol>
 </body>
 </html>
