laba-8 and iframe

--- a/ib/labs/index.html
+++ b/ib/labs/index.html
@@ -72,10 +72,12 @@
             </a>
         </p>
         <h4>Ближайшие курсы</h4>
-        <p>
-            HTML | CSS | PHP | JavaScript 
-        </p>
+          <p>
+            <a href="courses/web.html" target="courses">WEB</a> | <a href="courses/php.html" target="courses">PHP</a> | <a href="courses/js.html" target="courses">JavaScript</a> 
+          </p>
+          <iframe src="courses/web.html" name="courses"></iframe>
     </div>
+    
 
     <hr>
 
