--- a/ib/demo/module-9/forms.html
+++ b/ib/demo/module-9/forms.html
@@ -1,9 +1,12 @@
-﻿<!DOCTYPE html>
-<html>
-	<head>
-		<title>Демонстрация: форма</title>
-	</head>
-	<body>
-		
-	</body>
+<!DOCTYPE html>
+<html lang="ru">
+<head>
+	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Forms</title>
+</head>
+<body>
+	
+</body>
 </html>
