--- a/ib/demo/module-9/forms.html
+++ b/ib/demo/module-9/forms.html
@@ -1,12 +1,20 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-	<meta charset="UTF-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Forms</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Forms</title>
 </head>
 <body>
-	
+  <form action="">
+    <input type="text" name="text" value=""><br>
+    <input type="password" name="password"><br>
+    <input type="submit" value="пуск"><br>
+    <input type="reset"><br>
+    <input type="image" src=""><br>
+    <input type="button" value="Кнопка"><br>
+    <input type="checkbox" name="c" checked><br>
+  </form>
 </body>
 </html>
