--- a/ib/demo/module-9/forms.html
+++ b/ib/demo/module-9/forms.html
@@ -10,11 +10,21 @@
   <form action="">
     <input type="text" name="text" value=""><br>
     <input type="password" name="password"><br>
-    <input type="submit" value="пуск"><br>
+    <input type="submit"><br>
     <input type="reset"><br>
     <input type="image" src=""><br>
     <input type="button" value="Кнопка"><br>
     <input type="checkbox" name="c" checked><br>
+
+    <select name="asdfg" id=""size="5" multiple>
+      <optgroup label="option 1, 2, 3, 4, 5">
+        <option value="1">html</option>
+        <option value="2">css</option>
+        <option value="3">git</option>
+        <option value="4">web-server</option>
+        <option value="5" selected>php</option>
+      </optgroup>
+    </select>
   </form>
 </body>
 </html>
