--- a/ib/demo/module-9/forms.html
+++ b/ib/demo/module-9/forms.html
@@ -15,8 +15,7 @@
     <input type="image" src=""><br>
     <input type="button" value="Кнопка"><br>
     <input type="checkbox" name="c" checked><br>
-
-    <select name="asdfg" id=""size="5" multiple>
+    <select name="asdfg" size="5" multiple>
       <optgroup label="option 1, 2, 3, 4, 5">
         <option value="1">html</option>
         <option value="2">css</option>
@@ -24,7 +23,7 @@
         <option value="4">web-server</option>
         <option value="5" selected>php</option>
       </optgroup>
-    </select>
+    <select/>
   </form>
 </body>
 </html>
