--- a/mozilla/src/index.html
+++ b/mozilla/src/index.html
@@ -56,7 +56,12 @@
     </li>
     <li><a href="html-tables.html">Таблицы html</a>
       <ol>
-        <li><a href="html-tables.html#html-tables-basics">html таблицы основы</a></li>
+        <li><a href="html-tables.html#html-tables-basics">Таблицы основы</a></li>
+        <li><a href="html-tables.html#what-are-tables?">Что такое таблицы?</a></li>
+        <li><a href="html-tables.html#how-does-the-table-work?">Как работает таблица?</a></li>
+        <li><a href="html-tables.html#design-of-tables">Оформление таблиц</a></li>
+        <li><a href="html-tables.html#how-not-to">Как не надо использовать таблицы html</a></li>
+
       </ol>
     </li>
   </ol>
