--- a/en/index.html
+++ b/en/index.html
@@ -19,7 +19,9 @@
   <p><a href="https://html5book.ru/html-table/#grouping" title="html5book.ru">Группировка разделов таблицы(Продолжение)</a></p>
   <p><a href="https://html5book.ru/css3-tables/" title="html5book.ru">css-таблицы(учебник)</a></p>
   <p><a href="https://html5book.ru/css-border/" title="html5book.ru">border, border-style, border-color . . .</a></p>
-  <h2>Макеты таблиц</h2>
+
+  <h2><a href="tables/index.html">Таблицы - Index</a></h2>
+  <h3>Макеты таблиц</h3>
   <ol>
     <li><a href="tables/horizontal-minimalism.html">Горизонтальный минимализм</a></li>
     <li><a href="tables/vertical-minimalism.html">Вертикальный минимализм</a></li>
