--- a/dt/02-basics-of-css/index.html
+++ b/dt/02-basics-of-css/index.html
@@ -5,12 +5,13 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>02. Basic of css</title>
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
   <ul>
-    <li><a href="">9. Введение в css.</a></li>
-    <li><a href="">10. Работа с цветом.</a></li>
-    <li><a href="">11. Ширина и высота.</a></li>
+    <li><a href="content/introduction-to-css.html">9. Введение в css.</a></li>
+    <li><a href="content/ways-to-set-colors-in-CSS.html">10. Работа с цветом.</a></li>
+    <li><a href="content/width-and-height.html">11. Ширина и высота.</a></li>
     <li><a href="">12. Выравнивание текста.</a></li>
     <li><a href="">13. Жирность.</a></li>
     <li><a href="">14. Курсив</a></li>
