--- a/dt/03. selectors/index.html
+++ b/dt/03. selectors/index.html
@@ -8,11 +8,11 @@
 </head>
 <body>
   <li><a href="">22. Родственные связи тегов.</a></li>
-  <li><a href=""></a></li>
-  <li><a href=""></a></li>
-  <li><a href=""></a></li>
-  <li><a href=""></a></li>
-  <li><a href=""></a></li>
+  <li><a href="file/Inheritance-of-CSS-properties.html">23. Наследование CSS свойств.</a></li>
+  <li><a href="">24. Группировка селекторов на CSS</a></li>
+  <li><a href="">25. Селектор потомков на CSS</a></li>
+  <li><a href="">26. Дочерний селектор на CSS</a></li>
+  <li><a href="">27. Классы элементов на CSS</a></li>
   <li><a href=""></a></li>
   <li><a href=""></a></li>
   <li><a href=""></a></li>
