html dt task28-32

--- a/dt/03. selectors/index.html
+++ b/dt/03. selectors/index.html
@@ -13,11 +13,11 @@
   <li><a href="">25. Селектор потомков на CSS</a></li>
   <li><a href="">26. Дочерний селектор на CSS</a></li>
   <li><a href="">27. Классы элементов на CSS</a></li>
-  <li><a href=""></a></li>
-  <li><a href=""></a></li>
-  <li><a href=""></a></li>
-  <li><a href=""></a></li>
-  <li><a href=""></a></li>
+  <li><a href="">28. Тег span для кусочков текста</a></li>
+  <li><a href="">29. Тег div для группировки тегов</a></li>
+  <li><a href="">30. Группировка классов</a></li>
+  <li><a href="file/Tag-with-the-specified-class.html">31. Тег с заданным классом</a></li>
+  <li><a href="file/Descendant-selector-and-classes.html">32. Селектор потомков и классы</a></li>
   <li><a href=""></a></li>
   <li><a href=""></a></li>
   <li><a href=""></a></li>
