--- a/dt/selectors-03/index.html
+++ b/dt/selectors-03/index.html
@@ -18,13 +18,13 @@
   <li><a href="">30. Группировка классов</a></li>
   <li><a href="file/Tag-with-the-specified-class.html">31. Тег с заданным классом</a></li>
   <li><a href="file/Descendant-selector-and-classes.html">32. Селектор потомков и классы</a></li>
-  <li><a href=""></a></li>
-  <li><a href=""></a></li>
-  <li><a href=""></a></li>
-  <li><a href=""></a></li>
-  <li><a href=""></a></li>
-  <li><a href=""></a></li>
-  <li><a href=""></a></li>
+  <li><a href="">33. Ошибки новичков</a></li>
+  <li><a href="">34. Элемент с несколькими классами</a></li>
+  <li><a href="">35. Селектор по id</a></li>
+  <li><a href="">36. Исполбзование id на CSS</a></li>
+  <li><a href="">37. Селектор по нескольким классам</a></li>
+  <li><a href="">38. Несколько селекторов слитно</a></li>
+  <li><a href="">39. Группировка сложных селекторов</a></li>
   <li><a href=""></a></li>
   <li><a href=""></a></li>
   <li><a href=""></a></li>
