--- a/dt/selectors-03/index.html
+++ b/dt/selectors-03/index.html
@@ -22,7 +22,7 @@
   <li><a href="">34. Элемент с несколькими классами</a></li>
   <li><a href="">35. Селектор по id</a></li>
   <li><a href="">36. Исполбзование id на CSS</a></li>
-  <li><a href="">37. Селектор по нескольким классам</a></li>
+  <li><a href="file/selector-for-several-classes.html">37. Селектор по нескольким классам</a></li>
   <li><a href="">38. Несколько селекторов слитно</a></li>
   <li><a href="">39. Группировка сложных селекторов</a></li>
   <li><a href=""></a></li>
