--- a/dt/block-model-05/file/external-indentation(margin)-61.html
+++ b/dt/block-model-05/file/external-indentation(margin)-61.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="../css/external-indentation(margin)-61.css">
 </head>
 <body>
-  <a href="../index.html">index.html(block-model-05)</a>
+  <a href="../index-05.html">index.html(block-model-05)</a>
   <h1>61. Внешний отступ(margin)</h1>
   <div id="parent">
     <div id="child"></div>
