--- a/dt/block-model-05/index-05.html
+++ b/dt/block-model-05/index-05.html
@@ -4,13 +4,14 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Блочная модель</title>
+  <title>Блочная модель(61-77).</title>
 </head>
 <body>
   <h1>Блочная модель</h1>
   <ul>
     <li><a href="file/external-indentation(margin)-61.html">61. Внешний отступ margin</a></li>
     <li><a href="file/margin-margins-for-different-sides-62.html">62. Отступы margin для разных сторон</a></li>
+    <li><a href="file/multiple-values-in-margin.html">63. Несколько значений в margin</a></li>
   </ul>
 </body>
 </html>
