--- a/dt/block-model-05/file/margin-margins-for-different-sides-62.html
+++ b/dt/block-model-05/file/margin-margins-for-different-sides-62.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="../css/margin-margins-for-different-sides-62.css">
 </head>
 <body>
-  <a href="../index.html">index.html(block-model-05)</a>
+  <a href="../index-05.html">index-05.html(block-model-05)</a>
   <h1>62. Отступы margin для разных сторон</h1>
   <p>
     Для того, чтобы задать разные отступы для разных сторон существуют отдельные свойства: margin-top - для верхней, margin-right - для правой, margin-bottom - для нижней и margin-left - для левой стороны.
@@ -16,6 +16,21 @@
   <h2>Пример</h2>
   <div id="parent">
     <div id="child"></div>
+  </div>
+
+  <h2>task-01</h2>
+  <div id="task-01">
+    <div id="task-01-01"></div>
+  </div>
+
+  <h2>task-02</h2>
+  <div id="task-02">
+    <div id="task-02-01"></div>
+  </div>
+
+  <h2>task-03</h2>
+  <div id="task-03">
+    <div id="task-03-01"></div>
   </div>
 </body>
 </html>
