--- a/dt/html-basics-01/07-tables/tables.html
+++ b/dt/html-basics-01/07-tables/tables.html
@@ -296,6 +296,6 @@
       <td>7kg</td>
     </tr>
   </table>
-  <h2><a href="../index.html">html basic</a></h2>
+  <h2><a href="../index-01.html">html basic</a></h2>
 </body>
 </html>
