--- a/dt/block-model-05/index-05.html
+++ b/dt/block-model-05/index-05.html
@@ -12,6 +12,7 @@
     <li><a href="file/external-indentation(margin)-61.html">61. Внешний отступ margin</a></li>
     <li><a href="file/margin-margins-for-different-sides-62.html">62. Отступы margin для разных сторон</a></li>
     <li><a href="file/multiple-values-in-margin.html">63. Несколько значений в margin</a></li>
+    <li><a href="file/working-with-padding-in-css-64.html">64. Внутренний отступ(padding) на css</a></li>
   </ul>
 </body>
 </html>
