--- a/dt/html-basics-01/05-links/links.html
+++ b/dt/html-basics-01/05-links/links.html
@@ -74,7 +74,7 @@
     <li><a href="page-3.html">Page 3</a></li>
   </ul>
   <p>
-    <a href="../index.html">index.html</a>
+    <a href="../index-01.html">index-01.html</a>
   </p>
 </body>
 </html>
