expert: конец строки, кодировка

--- a/expert/html2/mod2/selectors/7-2_pseudo-class.html
+++ b/expert/html2/mod2/selectors/7-2_pseudo-class.html
@@ -8,8 +8,12 @@ div{
  padding: 10px 50px;
 }
 /*:first-child :last-child :last-of-type :first-of-type*/
-
-
+p:first-child{
+	color: maroon;
+}
+:last-child{
+	color: red;
+}
 
 </style>
 </head>
