--- a/expert/html2/mod2/selectors/lab31.html
+++ b/expert/html2/mod2/selectors/lab31.html
@@ -1,72 +1,72 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<meta http-equiv="Content-Type" content="text/html; charset=windows-1251" />
-	<title>Селекторы CSS</title>
+	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+	<title>РЎРµР»РµРєС‚РѕСЂС‹ CSS</title>
 	<link type="text/css" rel="stylesheet" href="lab31.css">
 </head>
 <body>
 	<div id="header">
-		<img id="logo" src="logo.gif" width="144" height="70" alt="Специалист">
-		<div id="top_text">Лучшие компьютерные курсы в Москве, Санкт-Петербурге, Ростове-на-Дону и Казани</div>
-		<h1>Центр «Специалист» стал авторизованным центром тестирования Pearson VUE</h1>
+		<img id="logo" src="logo.gif" width="144" height="70" alt="РЎРїРµС†РёР°Р»РёСЃС‚">
+		<div id="top_text">Р›СѓС‡С€РёРµ РєРѕРјРїСЊСЋС‚РµСЂРЅС‹Рµ РєСѓСЂСЃС‹ РІ РњРѕСЃРєРІРµ, РЎР°РЅРєС‚-РџРµС‚РµСЂР±СѓСЂРіРµ, Р РѕСЃС‚РѕРІРµ-РЅР°-Р”РѕРЅСѓ Рё РљР°Р·Р°РЅРё</div>
+		<h1>Р¦РµРЅС‚СЂ В«РЎРїРµС†РёР°Р»РёСЃС‚В» СЃС‚Р°Р» Р°РІС‚РѕСЂРёР·РѕРІР°РЅРЅС‹Рј С†РµРЅС‚СЂРѕРј С‚РµСЃС‚РёСЂРѕРІР°РЅРёСЏ Pearson VUE</h1>
 	</div>
 	<table>
 	<tr>
 		<td id="left">
 			<img src="prometric.gif" width="281" height="108" alt="Prometric">
-			<div class="text">«Специалист» и <a href="#">Pearson VUE</a> объединяют свои усилия для установления новых, более высоких, стандартов индивидуальной ИТ-сертификации профессионалов. Теперь выпускники курсов Cisco, Adobe, Oracle, Zend и многих других смогут сдать сертифицированные экзамены и подтвердить свой международный статус профессионала в авторизованном центре тестирования <a href="#">Pearson VUE</a>. Центр тестирования Pearson VUE расположен в центре Москвы на улице <a class="select" href="#" title="ул. Радио, д.24, корпус 1, 2-ой подъезд, 2-ой этаж">Радио</a>.
+			<div class="text">В«РЎРїРµС†РёР°Р»РёСЃС‚В» Рё <a href="#">Pearson VUE</a> РѕР±СЉРµРґРёРЅСЏСЋС‚ СЃРІРѕРё СѓСЃРёР»РёСЏ РґР»СЏ СѓСЃС‚Р°РЅРѕРІР»РµРЅРёСЏ РЅРѕРІС‹С…, Р±РѕР»РµРµ РІС‹СЃРѕРєРёС…, СЃС‚Р°РЅРґР°СЂС‚РѕРІ РёРЅРґРёРІРёРґСѓР°Р»СЊРЅРѕР№ РРў-СЃРµСЂС‚РёС„РёРєР°С†РёРё РїСЂРѕС„РµСЃСЃРёРѕРЅР°Р»РѕРІ. РўРµРїРµСЂСЊ РІС‹РїСѓСЃРєРЅРёРєРё РєСѓСЂСЃРѕРІ Cisco, Adobe, Oracle, Zend Рё РјРЅРѕРіРёС… РґСЂСѓРіРёС… СЃРјРѕРіСѓС‚ СЃРґР°С‚СЊ СЃРµСЂС‚РёС„РёС†РёСЂРѕРІР°РЅРЅС‹Рµ СЌРєР·Р°РјРµРЅС‹ Рё РїРѕРґС‚РІРµСЂРґРёС‚СЊ СЃРІРѕР№ РјРµР¶РґСѓРЅР°СЂРѕРґРЅС‹Р№ СЃС‚Р°С‚СѓСЃ РїСЂРѕС„РµСЃСЃРёРѕРЅР°Р»Р° РІ Р°РІС‚РѕСЂРёР·РѕРІР°РЅРЅРѕРј С†РµРЅС‚СЂРµ С‚РµСЃС‚РёСЂРѕРІР°РЅРёСЏ <a href="#">Pearson VUE</a>. Р¦РµРЅС‚СЂ С‚РµСЃС‚РёСЂРѕРІР°РЅРёСЏ Pearson VUE СЂР°СЃРїРѕР»РѕР¶РµРЅ РІ С†РµРЅС‚СЂРµ РњРѕСЃРєРІС‹ РЅР° СѓР»РёС†Рµ <a class="select" href="#" title="СѓР». Р Р°РґРёРѕ, Рґ.24, РєРѕСЂРїСѓСЃ 1, 2-РѕР№ РїРѕРґСЉРµР·Рґ, 2-РѕР№ СЌС‚Р°Р¶">Р Р°РґРёРѕ</a>.
 			</div>
-			<div class="text">Подготовка к сертификации включает в себя изучение новых продуктов и технологий. Курсы обучения в Центре «Специалист» призваны помочь молодым специалистам сконцентрироваться на главном. Получить знания и закрепить их на практике. Центр «Специалист» предоставляет всем неудачно сдавшим экзамен через Pearson VUE скидку 10% на курс подготовки к нему. А тем, кто стал сертифицированным профессионалом международного уровня, «Специалист» также дарит скидку 10% на курс подготовки к любому следующему экзамену через Pearson VUE.
+			<div class="text">РџРѕРґРіРѕС‚РѕРІРєР° Рє СЃРµСЂС‚РёС„РёРєР°С†РёРё РІРєР»СЋС‡Р°РµС‚ РІ СЃРµР±СЏ РёР·СѓС‡РµРЅРёРµ РЅРѕРІС‹С… РїСЂРѕРґСѓРєС‚РѕРІ Рё С‚РµС…РЅРѕР»РѕРіРёР№. РљСѓСЂСЃС‹ РѕР±СѓС‡РµРЅРёСЏ РІ Р¦РµРЅС‚СЂРµ В«РЎРїРµС†РёР°Р»РёСЃС‚В» РїСЂРёР·РІР°РЅС‹ РїРѕРјРѕС‡СЊ РјРѕР»РѕРґС‹Рј СЃРїРµС†РёР°Р»РёСЃС‚Р°Рј СЃРєРѕРЅС†РµРЅС‚СЂРёСЂРѕРІР°С‚СЊСЃСЏ РЅР° РіР»Р°РІРЅРѕРј. РџРѕР»СѓС‡РёС‚СЊ Р·РЅР°РЅРёСЏ Рё Р·Р°РєСЂРµРїРёС‚СЊ РёС… РЅР° РїСЂР°РєС‚РёРєРµ. Р¦РµРЅС‚СЂ В«РЎРїРµС†РёР°Р»РёСЃС‚В» РїСЂРµРґРѕСЃС‚Р°РІР»СЏРµС‚ РІСЃРµРј РЅРµСѓРґР°С‡РЅРѕ СЃРґР°РІС€РёРј СЌРєР·Р°РјРµРЅ С‡РµСЂРµР· Pearson VUE СЃРєРёРґРєСѓ 10% РЅР° РєСѓСЂСЃ РїРѕРґРіРѕС‚РѕРІРєРё Рє РЅРµРјСѓ. Рђ С‚РµРј, РєС‚Рѕ СЃС‚Р°Р» СЃРµСЂС‚РёС„РёС†РёСЂРѕРІР°РЅРЅС‹Рј РїСЂРѕС„РµСЃСЃРёРѕРЅР°Р»РѕРј РјРµР¶РґСѓРЅР°СЂРѕРґРЅРѕРіРѕ СѓСЂРѕРІРЅСЏ, В«РЎРїРµС†РёР°Р»РёСЃС‚В» С‚Р°РєР¶Рµ РґР°СЂРёС‚ СЃРєРёРґРєСѓ 10% РЅР° РєСѓСЂСЃ РїРѕРґРіРѕС‚РѕРІРєРё Рє Р»СЋР±РѕРјСѓ СЃР»РµРґСѓСЋС‰РµРјСѓ СЌРєР·Р°РјРµРЅСѓ С‡РµСЂРµР· Pearson VUE.
 			</div>
-			<div class="text bold">В ассортименте Центра более 1000 обучающих курсов для специалистов и начинающих пользователей, которые ведут опытные и сертифицированные преподаватели. Центр «Специалист» является:		
+			<div class="text bold">Р’ Р°СЃСЃРѕСЂС‚РёРјРµРЅС‚Рµ Р¦РµРЅС‚СЂР° Р±РѕР»РµРµ 1000 РѕР±СѓС‡Р°СЋС‰РёС… РєСѓСЂСЃРѕРІ РґР»СЏ СЃРїРµС†РёР°Р»РёСЃС‚РѕРІ Рё РЅР°С‡РёРЅР°СЋС‰РёС… РїРѕР»СЊР·РѕРІР°С‚РµР»РµР№, РєРѕС‚РѕСЂС‹Рµ РІРµРґСѓС‚ РѕРїС‹С‚РЅС‹Рµ Рё СЃРµСЂС‚РёС„РёС†РёСЂРѕРІР°РЅРЅС‹Рµ РїСЂРµРїРѕРґР°РІР°С‚РµР»Рё. Р¦РµРЅС‚СЂ В«РЎРїРµС†РёР°Р»РёСЃС‚В» СЏРІР»СЏРµС‚СЃСЏ:		
 			</div>
 		    <ul>
-				<li>Авторизованным учебным центром Cisco Systems</li>
-				<li>Крупнейшим и единственным в России авторизованным Центром Adobe</li>
-				<li>Учебным центром, готовящим к престижной сертификации ZCE (Zend Certified Engineer) по PHP</li>
-				<li>Центром обучения, готовящим ко всем сертификациям Oracle</li>
+				<li>РђРІС‚РѕСЂРёР·РѕРІР°РЅРЅС‹Рј СѓС‡РµР±РЅС‹Рј С†РµРЅС‚СЂРѕРј Cisco Systems</li>
+				<li>РљСЂСѓРїРЅРµР№С€РёРј Рё РµРґРёРЅСЃС‚РІРµРЅРЅС‹Рј РІ Р РѕСЃСЃРёРё Р°РІС‚РѕСЂРёР·РѕРІР°РЅРЅС‹Рј Р¦РµРЅС‚СЂРѕРј Adobe</li>
+				<li>РЈС‡РµР±РЅС‹Рј С†РµРЅС‚СЂРѕРј, РіРѕС‚РѕРІСЏС‰РёРј Рє РїСЂРµСЃС‚РёР¶РЅРѕР№ СЃРµСЂС‚РёС„РёРєР°С†РёРё ZCE (Zend Certified Engineer) РїРѕ PHP</li>
+				<li>Р¦РµРЅС‚СЂРѕРј РѕР±СѓС‡РµРЅРёСЏ, РіРѕС‚РѕРІСЏС‰РёРј РєРѕ РІСЃРµРј СЃРµСЂС‚РёС„РёРєР°С†РёСЏРј Oracle</li>
 			</ul>
-			<div class="text">«Российским компаниям нужны компетентные специалисты, обладающие нужными техническими знаниями и навыками, и чтобы быть уверенными, что эти люди получают все необходимые технические знания, Центр «Специалист» сотрудничает с ведущим провайдером по тестированию в мире – Pearson VUE. Принимая экзамены наших выпускников в центре тестирования Pearson VUE, мы преследуем цель, которую можно выразить в следующих словах: нужные люди в нужном месте и в нужное время. Мы хотим, чтобы наши выпускники получали максимум знаний и практических навыков, используя возможности центра тестирования. Мы уверены, что в результате данного сотрудничества специалисты, сдавшие экзамены через Pearson VUE, смогут на 100% подтвердить свой профессионализм во всем мире», – сообщает директор Центра «Специалист» Дмитрий Гудзенко.
+			<div class="text">В«Р РѕСЃСЃРёР№СЃРєРёРј РєРѕРјРїР°РЅРёСЏРј РЅСѓР¶РЅС‹ РєРѕРјРїРµС‚РµРЅС‚РЅС‹Рµ СЃРїРµС†РёР°Р»РёСЃС‚С‹, РѕР±Р»Р°РґР°СЋС‰РёРµ РЅСѓР¶РЅС‹РјРё С‚РµС…РЅРёС‡РµСЃРєРёРјРё Р·РЅР°РЅРёСЏРјРё Рё РЅР°РІС‹РєР°РјРё, Рё С‡С‚РѕР±С‹ Р±С‹С‚СЊ СѓРІРµСЂРµРЅРЅС‹РјРё, С‡С‚Рѕ СЌС‚Рё Р»СЋРґРё РїРѕР»СѓС‡Р°СЋС‚ РІСЃРµ РЅРµРѕР±С…РѕРґРёРјС‹Рµ С‚РµС…РЅРёС‡РµСЃРєРёРµ Р·РЅР°РЅРёСЏ, Р¦РµРЅС‚СЂ В«РЎРїРµС†РёР°Р»РёСЃС‚В» СЃРѕС‚СЂСѓРґРЅРёС‡Р°РµС‚ СЃ РІРµРґСѓС‰РёРј РїСЂРѕРІР°Р№РґРµСЂРѕРј РїРѕ С‚РµСЃС‚РёСЂРѕРІР°РЅРёСЋ РІ РјРёСЂРµ вЂ“ Pearson VUE. РџСЂРёРЅРёРјР°СЏ СЌРєР·Р°РјРµРЅС‹ РЅР°С€РёС… РІС‹РїСѓСЃРєРЅРёРєРѕРІ РІ С†РµРЅС‚СЂРµ С‚РµСЃС‚РёСЂРѕРІР°РЅРёСЏ Pearson VUE, РјС‹ РїСЂРµСЃР»РµРґСѓРµРј С†РµР»СЊ, РєРѕС‚РѕСЂСѓСЋ РјРѕР¶РЅРѕ РІС‹СЂР°Р·РёС‚СЊ РІ СЃР»РµРґСѓСЋС‰РёС… СЃР»РѕРІР°С…: РЅСѓР¶РЅС‹Рµ Р»СЋРґРё РІ РЅСѓР¶РЅРѕРј РјРµСЃС‚Рµ Рё РІ РЅСѓР¶РЅРѕРµ РІСЂРµРјСЏ. РњС‹ С…РѕС‚РёРј, С‡С‚РѕР±С‹ РЅР°С€Рё РІС‹РїСѓСЃРєРЅРёРєРё РїРѕР»СѓС‡Р°Р»Рё РјР°РєСЃРёРјСѓРј Р·РЅР°РЅРёР№ Рё РїСЂР°РєС‚РёС‡РµСЃРєРёС… РЅР°РІС‹РєРѕРІ, РёСЃРїРѕР»СЊР·СѓСЏ РІРѕР·РјРѕР¶РЅРѕСЃС‚Рё С†РµРЅС‚СЂР° С‚РµСЃС‚РёСЂРѕРІР°РЅРёСЏ. РњС‹ СѓРІРµСЂРµРЅС‹, С‡С‚Рѕ РІ СЂРµР·СѓР»СЊС‚Р°С‚Рµ РґР°РЅРЅРѕРіРѕ СЃРѕС‚СЂСѓРґРЅРёС‡РµСЃС‚РІР° СЃРїРµС†РёР°Р»РёСЃС‚С‹, СЃРґР°РІС€РёРµ СЌРєР·Р°РјРµРЅС‹ С‡РµСЂРµР· Pearson VUE, СЃРјРѕРіСѓС‚ РЅР° 100% РїРѕРґС‚РІРµСЂРґРёС‚СЊ СЃРІРѕР№ РїСЂРѕС„РµСЃСЃРёРѕРЅР°Р»РёР·Рј РІРѕ РІСЃРµРј РјРёСЂРµВ», вЂ“ СЃРѕРѕР±С‰Р°РµС‚ РґРёСЂРµРєС‚РѕСЂ Р¦РµРЅС‚СЂР° В«РЎРїРµС†РёР°Р»РёСЃС‚В» Р”РјРёС‚СЂРёР№ Р“СѓРґР·РµРЅРєРѕ.
 			</div>
-			<div class="text">К услугам выпускников Центра «Специалист» просторные классы, оснащенные современными компьютерами и высокоскоростным доступом в интернет. Администраторы центра тестирования проконсультируют по вопросам сертификации и подготовки к экзаменам. Доброжелательность сотрудников Центра «Специалист» обеспечит кандидату максимальный комфорт во время сдачи экзамена.
+			<div class="text">Рљ СѓСЃР»СѓРіР°Рј РІС‹РїСѓСЃРєРЅРёРєРѕРІ Р¦РµРЅС‚СЂР° В«РЎРїРµС†РёР°Р»РёСЃС‚В» РїСЂРѕСЃС‚РѕСЂРЅС‹Рµ РєР»Р°СЃСЃС‹, РѕСЃРЅР°С‰РµРЅРЅС‹Рµ СЃРѕРІСЂРµРјРµРЅРЅС‹РјРё РєРѕРјРїСЊСЋС‚РµСЂР°РјРё Рё РІС‹СЃРѕРєРѕСЃРєРѕСЂРѕСЃС‚РЅС‹Рј РґРѕСЃС‚СѓРїРѕРј РІ РёРЅС‚РµСЂРЅРµС‚. РђРґРјРёРЅРёСЃС‚СЂР°С‚РѕСЂС‹ С†РµРЅС‚СЂР° С‚РµСЃС‚РёСЂРѕРІР°РЅРёСЏ РїСЂРѕРєРѕРЅСЃСѓР»СЊС‚РёСЂСѓСЋС‚ РїРѕ РІРѕРїСЂРѕСЃР°Рј СЃРµСЂС‚РёС„РёРєР°С†РёРё Рё РїРѕРґРіРѕС‚РѕРІРєРё Рє СЌРєР·Р°РјРµРЅР°Рј. Р”РѕР±СЂРѕР¶РµР»Р°С‚РµР»СЊРЅРѕСЃС‚СЊ СЃРѕС‚СЂСѓРґРЅРёРєРѕРІ Р¦РµРЅС‚СЂР° В«РЎРїРµС†РёР°Р»РёСЃС‚В» РѕР±РµСЃРїРµС‡РёС‚ РєР°РЅРґРёРґР°С‚Сѓ РјР°РєСЃРёРјР°Р»СЊРЅС‹Р№ РєРѕРјС„РѕСЂС‚ РІРѕ РІСЂРµРјСЏ СЃРґР°С‡Рё СЌРєР·Р°РјРµРЅР°.
 			</div>
-			<div>Сдавайте сертификационные экзамены в авторизованном Центре тестирования «Специалист» <a href="#">Pearson VUE</a> и становитесь сертифицированными профессионалами международного уровня!
+			<div>РЎРґР°РІР°Р№С‚Рµ СЃРµСЂС‚РёС„РёРєР°С†РёРѕРЅРЅС‹Рµ СЌРєР·Р°РјРµРЅС‹ РІ Р°РІС‚РѕСЂРёР·РѕРІР°РЅРЅРѕРј Р¦РµРЅС‚СЂРµ С‚РµСЃС‚РёСЂРѕРІР°РЅРёСЏ В«РЎРїРµС†РёР°Р»РёСЃС‚В» <a href="#">Pearson VUE</a> Рё СЃС‚Р°РЅРѕРІРёС‚РµСЃСЊ СЃРµСЂС‚РёС„РёС†РёСЂРѕРІР°РЅРЅС‹РјРё РїСЂРѕС„РµСЃСЃРёРѕРЅР°Р»Р°РјРё РјРµР¶РґСѓРЅР°СЂРѕРґРЅРѕРіРѕ СѓСЂРѕРІРЅСЏ!
 			</div>
 		</td>
 		<td id="right">
-			<h2>Новости</h2>
+			<h2>РќРѕРІРѕСЃС‚Рё</h2>
 
 			<div class="news">
-				<h3>«Специалист» поздравляет всех Татьян и студентов с Вашим замечательным праздником!</h3>
-				<div>Мы желаем Вам безграничного оптимизма, интересной учебы, увлекательной жизни, любимой работы, карьерного роста и самой важной для всего этого составляющей – знаний. А всем абитуриентам «Специалист» желает успешной сдачи ЕГЭ и скорее стать студентами! Ведь недаром говорят, что студенчество – самое веселое, интересное и памятное время в жизни! На курсах по подготовке к успешной сдачи ЕГЭ в «Специалисте» Вы получите все необходимые знания, уникальные опыт и навыки, которые обеспечат Вам поступление в ВУЗ вашей мечты!
+				<h3>В«РЎРїРµС†РёР°Р»РёСЃС‚В» РїРѕР·РґСЂР°РІР»СЏРµС‚ РІСЃРµС… РўР°С‚СЊСЏРЅ Рё СЃС‚СѓРґРµРЅС‚РѕРІ СЃ Р’Р°С€РёРј Р·Р°РјРµС‡Р°С‚РµР»СЊРЅС‹Рј РїСЂР°Р·РґРЅРёРєРѕРј!</h3>
+				<div>РњС‹ Р¶РµР»Р°РµРј Р’Р°Рј Р±РµР·РіСЂР°РЅРёС‡РЅРѕРіРѕ РѕРїС‚РёРјРёР·РјР°, РёРЅС‚РµСЂРµСЃРЅРѕР№ СѓС‡РµР±С‹, СѓРІР»РµРєР°С‚РµР»СЊРЅРѕР№ Р¶РёР·РЅРё, Р»СЋР±РёРјРѕР№ СЂР°Р±РѕС‚С‹, РєР°СЂСЊРµСЂРЅРѕРіРѕ СЂРѕСЃС‚Р° Рё СЃР°РјРѕР№ РІР°Р¶РЅРѕР№ РґР»СЏ РІСЃРµРіРѕ СЌС‚РѕРіРѕ СЃРѕСЃС‚Р°РІР»СЏСЋС‰РµР№ вЂ“ Р·РЅР°РЅРёР№. Рђ РІСЃРµРј Р°Р±РёС‚СѓСЂРёРµРЅС‚Р°Рј В«РЎРїРµС†РёР°Р»РёСЃС‚В» Р¶РµР»Р°РµС‚ СѓСЃРїРµС€РЅРѕР№ СЃРґР°С‡Рё Р•Р“Р­ Рё СЃРєРѕСЂРµРµ СЃС‚Р°С‚СЊ СЃС‚СѓРґРµРЅС‚Р°РјРё! Р’РµРґСЊ РЅРµРґР°СЂРѕРј РіРѕРІРѕСЂСЏС‚, С‡С‚Рѕ СЃС‚СѓРґРµРЅС‡РµСЃС‚РІРѕ вЂ“ СЃР°РјРѕРµ РІРµСЃРµР»РѕРµ, РёРЅС‚РµСЂРµСЃРЅРѕРµ Рё РїР°РјСЏС‚РЅРѕРµ РІСЂРµРјСЏ РІ Р¶РёР·РЅРё! РќР° РєСѓСЂСЃР°С… РїРѕ РїРѕРґРіРѕС‚РѕРІРєРµ Рє СѓСЃРїРµС€РЅРѕР№ СЃРґР°С‡Рё Р•Р“Р­ РІ В«РЎРїРµС†РёР°Р»РёСЃС‚РµВ» Р’С‹ РїРѕР»СѓС‡РёС‚Рµ РІСЃРµ РЅРµРѕР±С…РѕРґРёРјС‹Рµ Р·РЅР°РЅРёСЏ, СѓРЅРёРєР°Р»СЊРЅС‹Рµ РѕРїС‹С‚ Рё РЅР°РІС‹РєРё, РєРѕС‚РѕСЂС‹Рµ РѕР±РµСЃРїРµС‡Р°С‚ Р’Р°Рј РїРѕСЃС‚СѓРїР»РµРЅРёРµ РІ Р’РЈР— РІР°С€РµР№ РјРµС‡С‚С‹!
 				</div>
-				<a href="#">Читать дальше</a>
+				<a href="#">Р§РёС‚Р°С‚СЊ РґР°Р»СЊС€Рµ</a>
 				<div>24.01.2011</div>
 			</div>
 			
 			<div class="news">
-				<h3>«День карьеры» в «Специалисте» — рекомендации и полезные советы по поиску работы!</h3>
-				<div>Специально для слушателей Центра «Специалист» и всех желающих 16 февраля будет проходить ставший уже традиционным бесплатный семинар «День карьеры».
+				<h3>В«Р”РµРЅСЊ РєР°СЂСЊРµСЂС‹В» РІ В«РЎРїРµС†РёР°Р»РёСЃС‚РµВ» вЂ” СЂРµРєРѕРјРµРЅРґР°С†РёРё Рё РїРѕР»РµР·РЅС‹Рµ СЃРѕРІРµС‚С‹ РїРѕ РїРѕРёСЃРєСѓ СЂР°Р±РѕС‚С‹!</h3>
+				<div>РЎРїРµС†РёР°Р»СЊРЅРѕ РґР»СЏ СЃР»СѓС€Р°С‚РµР»РµР№ Р¦РµРЅС‚СЂР° В«РЎРїРµС†РёР°Р»РёСЃС‚В» Рё РІСЃРµС… Р¶РµР»Р°СЋС‰РёС… 16 С„РµРІСЂР°Р»СЏ Р±СѓРґРµС‚ РїСЂРѕС…РѕРґРёС‚СЊ СЃС‚Р°РІС€РёР№ СѓР¶Рµ С‚СЂР°РґРёС†РёРѕРЅРЅС‹Рј Р±РµСЃРїР»Р°С‚РЅС‹Р№ СЃРµРјРёРЅР°СЂ В«Р”РµРЅСЊ РєР°СЂСЊРµСЂС‹В».
 				</div>
-				<a href="#">Читать дальше</a>
+				<a href="#">Р§РёС‚Р°С‚СЊ РґР°Р»СЊС€Рµ</a>
 				<div>24.01.2011</div>
 			</div>
 
 			<div class="news">
-				<h3>«Специалист» обнимает Вас новыми знаниями!</h3>
-				<div>А знаете ли Вы, что 21 января – Международный день объятий? Учебный Центр «Специалист» обнимает Вас и поздравляет с этим чудесным и веселым праздником! Желаем Вам всегда добиваться целей, идти в ногу со временем и стремиться к новым свершениям, расширяя горизонты для творчества и самореализации! Мы крепко сомкнем вокруг Вас «объятья знаний и свежих идей», подарим уникальные опыт и навыки, которые гарантируют Вам профессиональный успех и карьерный рост!
+				<h3>В«РЎРїРµС†РёР°Р»РёСЃС‚В» РѕР±РЅРёРјР°РµС‚ Р’Р°СЃ РЅРѕРІС‹РјРё Р·РЅР°РЅРёСЏРјРё!</h3>
+				<div>Рђ Р·РЅР°РµС‚Рµ Р»Рё Р’С‹, С‡С‚Рѕ 21 СЏРЅРІР°СЂСЏ вЂ“ РњРµР¶РґСѓРЅР°СЂРѕРґРЅС‹Р№ РґРµРЅСЊ РѕР±СЉСЏС‚РёР№? РЈС‡РµР±РЅС‹Р№ Р¦РµРЅС‚СЂ В«РЎРїРµС†РёР°Р»РёСЃС‚В» РѕР±РЅРёРјР°РµС‚ Р’Р°СЃ Рё РїРѕР·РґСЂР°РІР»СЏРµС‚ СЃ СЌС‚РёРј С‡СѓРґРµСЃРЅС‹Рј Рё РІРµСЃРµР»С‹Рј РїСЂР°Р·РґРЅРёРєРѕРј! Р–РµР»Р°РµРј Р’Р°Рј РІСЃРµРіРґР° РґРѕР±РёРІР°С‚СЊСЃСЏ С†РµР»РµР№, РёРґС‚Рё РІ РЅРѕРіСѓ СЃРѕ РІСЂРµРјРµРЅРµРј Рё СЃС‚СЂРµРјРёС‚СЊСЃСЏ Рє РЅРѕРІС‹Рј СЃРІРµСЂС€РµРЅРёСЏРј, СЂР°СЃС€РёСЂСЏСЏ РіРѕСЂРёР·РѕРЅС‚С‹ РґР»СЏ С‚РІРѕСЂС‡РµСЃС‚РІР° Рё СЃР°РјРѕСЂРµР°Р»РёР·Р°С†РёРё! РњС‹ РєСЂРµРїРєРѕ СЃРѕРјРєРЅРµРј РІРѕРєСЂСѓРі Р’Р°СЃ В«РѕР±СЉСЏС‚СЊСЏ Р·РЅР°РЅРёР№ Рё СЃРІРµР¶РёС… РёРґРµР№В», РїРѕРґР°СЂРёРј СѓРЅРёРєР°Р»СЊРЅС‹Рµ РѕРїС‹С‚ Рё РЅР°РІС‹РєРё, РєРѕС‚РѕСЂС‹Рµ РіР°СЂР°РЅС‚РёСЂСѓСЋС‚ Р’Р°Рј РїСЂРѕС„РµСЃСЃРёРѕРЅР°Р»СЊРЅС‹Р№ СѓСЃРїРµС… Рё РєР°СЂСЊРµСЂРЅС‹Р№ СЂРѕСЃС‚!
 				</div>
-				<a href="#">Читать дальше</a>
+				<a href="#">Р§РёС‚Р°С‚СЊ РґР°Р»СЊС€Рµ</a>
 				<div>21.01.2011</div>
 			</div>
 		</td>
 	</tr>
 	</table>
 	<div id="footer">
-		<h4>Центр компьютерного обучения «Специалист» при МГТУ им.Н.Э.Баумана</h4>
-		<address>Адрес главного офиса: г. Москва, Госпитальный переулок, д. 4/6.</address>
-		<address>Телефоны: (495) 232-32-16, (812) 335-93-39, (843) 526-01-00, (863) 256-16-52</address>
+		<h4>Р¦РµРЅС‚СЂ РєРѕРјРїСЊСЋС‚РµСЂРЅРѕРіРѕ РѕР±СѓС‡РµРЅРёСЏ В«РЎРїРµС†РёР°Р»РёСЃС‚В» РїСЂРё РњР“РўРЈ РёРј.Рќ.Р­.Р‘Р°СѓРјР°РЅР°</h4>
+		<address>РђРґСЂРµСЃ РіР»Р°РІРЅРѕРіРѕ РѕС„РёСЃР°: Рі. РњРѕСЃРєРІР°, Р“РѕСЃРїРёС‚Р°Р»СЊРЅС‹Р№ РїРµСЂРµСѓР»РѕРє, Рґ. 4/6.</address>
+		<address>РўРµР»РµС„РѕРЅС‹: (495) 232-32-16, (812) 335-93-39, (843) 526-01-00, (863) 256-16-52</address>
 	</div>
 </body>
 </html>
