--- a/dt/block-model-05/index-05.html
+++ b/dt/block-model-05/index-05.html
@@ -13,6 +13,11 @@
     <li><a href="file/margin-margins-for-different-sides-62.html">62. Отступы margin для разных сторон</a></li>
     <li><a href="file/multiple-values-in-margin.html">63. Несколько значений в margin</a></li>
     <li><a href="file/working-with-padding-in-css-64.html">64. Внутренний отступ(padding) на css</a></li>
+    <li><a href="">65. Отступы padding для разных сторон</a></li>
+    <li><a href="">66. Несколько значений в padding</a></li>
+    <li><a href="file/expansion-of-elements-67.html">67. Расширение элементов</a></li>
+    <li><a href="file/features-of-block-elements-in-CSS-68.html">68. Особенности блочных элементов в CSS</a></li>
+    <li><a href="file/features-of-lowercase-elements-in-CSS-69.html">69. Особенности строчных элементов в CSS</a></li>
   </ul>
 </body>
 </html>
