--- a/dt/registration-04/index-04.html
+++ b/dt/registration-04/index-04.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Оформление(51-60).</title>
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-  
+  <h1>4. Оформление</h1>
+  <ul>
+    <li><a href="file/setting-the-background-color-to-css-51.html">51. Установка фонового цвета при помощи css</a></li>
+  </ul>
 </body>
 </html>
