--- a/en/index.html
+++ b/en/index.html
@@ -5,11 +5,12 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Index (EN)</title>
+  <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
   <h1>Сайт html5book.ru</h1>
   <ul>
-    <li><a href="tables.html" title="my-html">таблицы html</a>
+    <li><a href="" title="my-html">таблицы html</a>
       <ul>
         <li><a href="https://html5book.ru/html-table/" title="html5book.ru">html-таблицы</a></li>
         <li><a href="https://html5book.ru/shpargalka-po-tablicam/"title="html5book.ru">уроки - шпаргалка по работе с таблицами</a></li>
@@ -20,12 +21,15 @@
   <p><a href="https://html5book.ru/css3-tables/" title="html5book.ru">css-таблицы(учебник)</a></p>
   <p><a href="https://html5book.ru/css-border/" title="html5book.ru">border, border-style, border-color . . .</a></p>
 
-  <h2><a href="tables/index.html">Таблицы - Index</a></h2>
+  <h3><a href="tables/index-tables.html">Таблицы(index-tables.html)</a></h3>
   <h3>Макеты таблиц</h3>
   <ol>
     <li><a href="tables/horizontal-minimalism.html">Горизонтальный минимализм</a></li>
     <li><a href="tables/vertical-minimalism.html">Вертикальный минимализм</a></li>
     <li><a href="tables/box-style.html">Коробочный стиль</a></li>
   </ol>
+
+  <h3>CSS-фон</h3>
+  <span><a href="background/css-background.html" title="background/css-background.html">css-background.html</a></span>
 </body>
 </html>
