--- a/dt/registration-04/file/setting-the-background-color-to-css-51.html
+++ b/dt/registration-04/file/setting-the-background-color-to-css-51.html
@@ -5,12 +5,46 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>51. Установка фонового цвета</title>
+  <link rel="stylesheet" href="../css/style.css">
+  <style>
+    #example{
+      width: 300px;
+      height: 100px;
+      color: rgb(255, 245, 226);
+      background-color: darkorange;
+    }
+    #task-1{
+      width: 200px;
+      height: 200px;
+      background-color: #7e89eb;
+    }
+    #task-2{
+      width: 300px;
+      height: 200px;
+      background-color: darkgreen;
+      color: darkgrey;
+      text-align: center;
+      font-size: 2em;
+    }
+  </style>
 </head>
 <body>
   <p><a href="../index-04.html">index-04.html(оформление 04)</a></p>
   <h1>51. Установка фонового цвета при помощи css</h1>
   <p>
-    Установка фонового цвета при помощью свойства <strong>background-color</strong>, которое принимает те же значения, что и хорошо известное вам <strong>color</strong>.
+    Установка фонового цвета при помощью свойства <span>background-color</span>, которое принимает те же значения, что и хорошо известное вам <span>color</span>.
   </p>
+  <h2>example 1</h2>
+  <div id='example'>
+    Lorem ipsum dolor sit amet.
+  </div>
+
+  <h2>task 1</h2>
+  <div id="task-1"></div>
+
+  <h2>task-2</h2>
+  <div id="task-2">
+    text text text
+  </div>
 </body>
 </html>
