--- a/dt/registration-04/index-04.html
+++ b/dt/registration-04/index-04.html
@@ -10,7 +10,10 @@
 <body>
   <h1>4. Оформление</h1>
   <ul>
-    <li><a href="file/setting-the-background-color-to-css-51.html">51. Установка фонового цвета при помощи css</a></li>
+    <li><a href="file/setting-the-background-color-to-css-51.html">51. Установка фонового цвета при помощи CSS</a></li>
+    <li><a href="file/basics-of-working-with-borders-52.html">52. Основы работы с границами на CSS</a></li>
+    <li><a href="file/abbreviation-for-CSS-border-53.html">53. Cокращение для границы на CSS</a></li>
+    <li><a href="file/border-for-individual-sides-in-CSS-54.html">54. Граница для отдельных сторон на CSS</a></li>
   </ul>
 </body>
 </html>
