--- a/en/index.html
+++ b/en/index.html
@@ -8,20 +8,17 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-  <h1>Сайт html5book.ru</h1>
+  <h1>С сайта html5book.ru</h1>
+
+  <h3>Tables</h3>
   <ul>
-    <li><a href="" title="my-html">таблицы html</a>
-      <ul>
-        <li><a href="https://html5book.ru/html-table/" title="html5book.ru">html-таблицы</a></li>
-        <li><a href="https://html5book.ru/shpargalka-po-tablicam/"title="html5book.ru">уроки - шпаргалка по работе с таблицами</a></li>
-      </ul>
-    </li>
+    <li><a href="https://html5book.ru/html-table/" title="html5book.ru">html-таблицы</a></li>
+    <li><a href="https://html5book.ru/shpargalka-po-tablicam/"title="html5book.ru">уроки - шпаргалка по работе с таблицами</a></li>
   </ul>
   <p><a href="https://html5book.ru/html-table/#grouping" title="html5book.ru">Группировка разделов таблицы(Продолжение)</a></p>
   <p><a href="https://html5book.ru/css3-tables/" title="html5book.ru">css-таблицы(учебник)</a></p>
-  <p><a href="https://html5book.ru/css-border/" title="html5book.ru">border, border-style, border-color . . .</a></p>
+  <p><a href="tables/index-tables.html">Таблицы(index-tables.html)</a></p>
 
-  <h3><a href="tables/index-tables.html">Таблицы(index-tables.html)</a></h3>
   <h3>Макеты таблиц</h3>
   <ol>
     <li><a href="tables/horizontal-minimalism.html">Горизонтальный минимализм</a></li>
@@ -29,7 +26,14 @@
     <li><a href="tables/box-style.html">Коробочный стиль</a></li>
   </ol>
 
-  <h3>CSS-фон</h3>
-  <span><a href="background/css-background.html" title="background/css-background.html">css-background.html</a></span>
+  <h3>CSS</h3>
+  <ul>
+    <li><a href="https://html5book.ru/css-background/" title="html5book.ru">CSS-фон(html5book.ru).</a></li>
+    <li><a href="file/CSS-background.html">CSS-background(EN)</a></li>
+    <li><a href="https://html5book.ru/css-border/" title="html5book.ru">CSS-рамка(html5book.ru)</a></li>
+    <li><a href="file/CSS-border.html">CSS-border</a></li>
+    <li><a href="https://html5book.ru/css3-borders/" title="html5book.ru">CSS3-рамка(html5book.ru)</a></li>
+    <li><a href="file/CSS3-border-radius.html">CSS3-border(EN)</a></li>
+  </ul>
 </body>
 </html>
