DT разное(задачи примеры)

--- a/dt/registration-04/file/border-for-individual-sides-in-CSS-54.html
+++ b/dt/registration-04/file/border-for-individual-sides-in-CSS-54.html
@@ -34,7 +34,7 @@
   </style>
 </head>
 <body>
-  <a href="../index-04.html">index-04.html(оформление 04)</a></p>
+  <p><a href="../index-04.html">index-04.html(оформление 04)</a></p>
 
   <h1>54. Граница для отдельных сторон на CSS</h1>
   <p>
