--- a/dt/registration-04/index-04.html
+++ b/dt/registration-04/index-04.html
@@ -14,6 +14,12 @@
     <li><a href="file/basics-of-working-with-borders-52.html">52. Основы работы с границами на CSS</a></li>
     <li><a href="file/abbreviation-for-CSS-border-53.html">53. Cокращение для границы на CSS</a></li>
     <li><a href="file/border-for-individual-sides-in-CSS-54.html">54. Граница для отдельных сторон на CSS</a></li>
+    <li><a href="file/rounding-borders-and-backgrounds-in-CSS-55.html">55. Скругление границ и фона на CSS</a></li>
+    <li><a href="file/rounding-for-different-CSS-corners-56.html">56. Скругления для разных углов CSS</a></li>
+    <li><a href="file/rounded-corners-as-a-percentage-on-CSS-57.html">57. Скругленные уголки в процентах на CSS</a></li>
+    <li><a href="file/background-images-58.html">58. Фоновые картинки</a></li>
+    <li><a href="file/list-markers(ul)-59.html">59. Маркеры списков(ul)</a></li>
+    <li><a href="file/list-markers(ol)-60.html">60. Маркеры списков(ol)</a></li>
   </ul>
 </body>
 </html>
